static/css/base.css
/* ... */
/* set colour for select box and select option children */
select,
select option {
    color: #000000;
}

.fieldset-label {
    font-size: 90%;
    font-weight: 600;
    margin-left: 0.5rem;
}

fieldset {
    padding: 0.5rem 1rem;
    border: 0.1rem solid #ff8881;
    margin-bottom: 3rem;
}

/* wrapper around product form to add/edit product */
.form-wrapper {
    border: 0.1rem solid #ff8881;
    padding: 1rem;
}

/* change helptext when associated market form input is invalid, added by JS */
.invalid-text {
    color: #dc3545;
    font-weight: 600;
}

/* ------- custom clearable file input (image field on product form) Credit: Code Institute */
/* span wrapped around file input */
.btn-file {
    position: relative;
    overflow: hidden;
}

/* input itself - position against above span - take up entire span */
.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

/* remove border radius and add BS danger color for checkbox */
.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* so that the label is in line with the checkbox */
label[for="image-clear_id"]{
    line-height: 1.5rem;
}

.current-image-label {
    font-size: 80%;
    font-weight: 500;
    margin-bottom: 0.5rem;
}

/* ---------------------------------------- Allauth form formatting */

.allauth-form-inner-content input {
    border-color: #1c1c1c;
    border-radius: 0;
}

/* labels heavier weight */
.allauth-form-inner-content label {
    font-size: 90%;
    font-weight: 500;
    margin-bottom: 0;
}

/* give placeholders same color as text */
.allauth-form-inner-content input::placeholder {
    color: #1c1c1c;
    font-weight: 100;
}

.allauth-form-inner-content p {
    margin-top: 1.8rem;
}

/* ---------------------------------------- Footer */

/* embedded mailchimp form - custom CSS */
.newsletter-form-input {
    border-radius: 0;
    background-color: #FDFDFD;
    padding: 0.5rem;
}

.btn-newsletter {
    background-color: #010101;
    border: 0.1rem solid #ff8881;
    color: #ff8881;
    padding: 0.5rem;
    text-transform: uppercase;
    letter-spacing: 0.05rem;
}

.btn-newsletter:hover,
.btn-newsletter:focus,
.btn-newsletter:active {
    background-color: #ff8881;
    color: #010101;
}

/* 
position sticky + 100vh, combined with 100% on body and html for sticky footer 
from: https://css-tricks.com/a-clever-sticky-footer-technique/
*/
footer {
    position: sticky;
    top: 100vh;
    background-color: #010101;
    color: #fdfdfd;
    font-size: 0.9rem;
    line-height: 1.5rem;
}

/* heading in footer for social links */
.sm-heading {
    color: #F98D85;
    font-weight: 500;
    font-size: 1.2rem;
}

.footer-link {
    color:#FDFDFD;
}

.footer-link:hover, 
.footer-link:active,
.footer-link:focus {
    color: #F98D85;
    text-decoration: underline;
}

/* icon in footer for social links */
footer i {
    font-size: 1.2rem;
}

/* copyright footnote */
.footnote {
    font-size: 0.8rem;
    font-weight: 300;
}

/* styles for the modals from footer useful links section */
.useful-links-modal .modal-content {
    padding: 1rem 0.5rem;
}

.useful-links-modal .modal-header,
.useful-links-modal .modal-footer {
    border: 0;
}

.useful-links-modal h2 {
    margin-top: 1.5rem;
}

/*================================== MEDIA QUERIES ===========================================*/
/*================================ bigger than mobile ====================================*/
@media screen and (min-width: 500px) {
    /* ---------------------------------------- Header */
    /* adjust sizes of logo and main header links */
    .logo {
        font-size: 3rem;
    }

    .nav-link {
        padding: 0.5rem 1rem;
    }

    .nav-icon {
        font-size: 1.5rem;
    }
    
    .nav-text {
        font-size: 1rem;
    }
}

/*================================ bigger than mobile ====================================*/
@media screen and (min-width: 770px) {
    /* ---------------------------------------- Products page nav */
    /* reverse the direction when expanded, so search bar stays on right */
    .navbar-expand-md {
        flex-direction: row-reverse;
    }
}

